--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         </div>
 
         <div class="container2 con">
-                <img class="img" src="./image-jonathan.jpg">
+                <img class="img" src="./image-jonathan.jpg" alt="Jonathan">
                 <p class="name">Jonathan Walters</p>
                 <p class="title">Verified Graduate</p>
 
@@ -41,7 +41,7 @@
         </div>
 
         <div class="container3 con">
-            <img class="img" src="./image-jeanette.jpg">
+            <img class="img" src="./image-jeanette.jpg" alt="Jeanette">
             <p class="name">Jeanette Harmon</p>
             <p class="title">Verified Graduate</p>
 
@@ -52,7 +52,7 @@
         </div>
 
         <div class="container4 con">
-            <img class="img" src="./image-patrick.jpg">
+            <img class="img" src="./image-patrick.jpg" alt="patrick">
             <p class="name">Patrick Abrams</p>
             <p class="title">Verified Graduate</p>
 
@@ -66,7 +66,7 @@
         </div>
 
         <div class="container5 con">
-            <img class="img" src="./image-kira.jpg">
+            <img class="img" src="./image-kira.jpg" alt="kira">
             <p class="name">Kira Whittle</p>
             <p class="title">Verified Graduate</p>
 
